@@ -1,5 +1,6 @@
 Changes for 1.8.2
 
+ - [ZBX-2020] added requirements check for PHP input_max_time (Vedmak)
  - [ZBX-1958] fixed problem with a lot of digits in float values (Vedmak)
  - [ZBX-1853] fixed template\host full clone with triggers with dependencies (Vedmak)
  - [ZBX-1999] fixed bug when cannot create simple check item with macro in parameters (Vedmak)
